tests/baselines/reference/parserRegularExpressionDivideAmbiguity5.errors.txt
==== tests/cases/compiler/parserRegularExpressionDivideAmbiguity5.ts (3 errors) ====
    model.rotate(0, rotateY * Math.PI / 180, rotateZ * Math.PI / 180);
    ~~~~~
!!! parserRegularExpressionDivideAmbiguity5.ts(1,1): error TS2095: Cannot find name 'model'.
                    ~~~~~~~
!!! parserRegularExpressionDivideAmbiguity5.ts(1,17): error TS2095: Cannot find name 'rotateY'.
                                             ~~~~~~~
!!! parserRegularExpressionDivideAmbiguity5.ts(1,42): error TS2095: Cannot find name 'rotateZ'.